--- a/css/site.css
+++ b/css/site.css
@@ -1,53 +1,67 @@
 /* CSS Rules */
 
-/* Navigation for the course search */
-#breadcrumb{
-    background-color:#cccccc;
-    font-size:21px;
-}
-
 /* Overall of all presentation */
 .container{
-    width:990px;
+    width:970px;
     margin: 0 auto;
 }
 
 /* Header part of HTML body */
 #header{
     font-size:39px;
-    width:900px;
+    width:970px;
     background-repeat:no-repeat;
     margin: 0 auto;
     float:left;
 }
 
-#image{
+#home-image{
     float:left;
 }
 /* Header part of HTML body */
 #title{
-    width:810px;
+    width:870px;
     float:left;
     font-size:35px;
+    padding-left:13px;
 }
 
 #navigation{
     background-color:#cccccc;
+    margin-top:20px;
     float:left;
-    width:100px;
+    width:110px;
     height:200px;
+    padding:10px;
 }
+/* Navigation for the course search */
+#breadcrumb{
+    background-color:#cccccc;
+    font-size:21px;
+}
+
+.center{
+    text-align:center;
+}
+
+#sub-title{
+    margin-top:10px;
+}
+
+
+
 
 /* Body part of HTML body */
 #body{
-    width:890px;
+    width:800px;
     float:left;
+    padding-left:30px;
 }
 
 /* Footer part of HTML body */
 #footer{
     clear:both;
-    width:890px;
+    width:970px;
     text-align:center;
     background-color:#cccccc;
     font-size:21px;
@@ -87,6 +101,18 @@ td{
 
 .course_group_title{
     float:left;
+}
+
+.for-hover{
+    display:none;
+}
+
+li:hover{
+    background-color:#cccccc;
+}
+
+li:hover ul{
+    display:block;
 }
 
 .clear_both{
